@@ -10,7 +10,7 @@ import com.wrkr.tickety.domains.member.domain.constant.Role;
 import com.wrkr.tickety.domains.member.domain.model.Member;
 import com.wrkr.tickety.domains.member.domain.service.MemberGetService;
 import com.wrkr.tickety.domains.ticket.application.dto.request.TicketCreateRequest;
-import com.wrkr.tickety.domains.ticket.application.dto.response.TicketAllGetPagingResponse;
+import com.wrkr.tickety.domains.ticket.application.dto.response.TicketAllGetResponse;
 import com.wrkr.tickety.domains.ticket.application.dto.response.TicketDetailGetResponse;
 import com.wrkr.tickety.domains.ticket.application.dto.response.TicketPkResponse;
 import com.wrkr.tickety.domains.ticket.application.usecase.ticket.TicketAllGetUseCase;
@@ -26,6 +26,7 @@ import com.wrkr.tickety.domains.ticket.domain.service.ticket.TicketSaveService;
 import com.wrkr.tickety.domains.ticket.domain.service.ticket.TicketUpdateService;
 import com.wrkr.tickety.domains.ticket.domain.service.tickethistory.TicketHistoryGetService;
 import com.wrkr.tickety.domains.ticket.domain.service.tickethistory.TicketHistorySaveService;
+import com.wrkr.tickety.global.common.dto.PageResponse;
 import com.wrkr.tickety.global.utils.PkCrypto;
 import java.time.LocalDateTime;
 import java.util.List;
@@ -136,7 +137,8 @@ public class TicketUseCaseTest {
             .build();
 
         given(categoryGetService.getCategory(anyLong())).willReturn(Optional.ofNullable(category));
-        given(memberGetService.byMemberId(anyLong())).willReturn(java.util.Optional.of(user));
+
+        given(memberGetService.byMemberId(anyLong())).willReturn(user);
         given(ticketSaveService.save(any(Ticket.class))).willReturn(ticket);
 
         // when
@@ -160,17 +162,17 @@ public class TicketUseCaseTest {
         Page<Ticket> ticketPage = new PageImpl<>(List.of(ticket));
 
         given(ticketGetService.getTicketsByUserId(anyLong(), any(Pageable.class))).willReturn(ticketPage);
-        given(memberGetService.byMemberId(anyLong())).willReturn(java.util.Optional.of(user));
+        given(memberGetService.byMemberId(anyLong())).willReturn(user);
         given(ticketHistoryGetService.getFirstManagerChangeDate(anyLong())).willReturn(LocalDateTime.now());
 
         //when
-        TicketAllGetPagingResponse ticketAllGetPagingResponse = ticketAllGetUseCase.getAllTickets(USER_ID, pageable);
+        PageResponse<TicketAllGetResponse> ticketAllGetPagingResponse = ticketAllGetUseCase.getAllTickets(USER_ID, pageable);
 
         //then
         assertThat(ticketAllGetPagingResponse).isNotNull();
         assertThat(ticketAllGetPagingResponse.currentPage()).isEqualTo(1);
         assertThat(ticketAllGetPagingResponse.size()).isEqualTo(1);
-        assertThat(ticketAllGetPagingResponse.tickets().get(0).serialNumber()).isEqualTo("#12345678");
+        assertThat(ticketAllGetPagingResponse.elements().getFirst().serialNumber()).isEqualTo("#12345678");
 
         verify(ticketGetService).getTicketsByUserId(anyLong(), any(Pageable.class));
         verify(memberGetService).byMemberId(anyLong());
